data/derived/comb/progs/unify/prog0812.ml.out
Characters 13-51:
  let _ = eval (NewExprB(VarX, VarY, VarX), -1,-1,-1);;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd
       but an expression was expected of type expr * float * float
